2013-07-12  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.23.0-rc2 Released.

	* Properly lock and safely handle a transfer failure in IAX2

	  When touching the bridgecallno, we need to lock it - otherwise a
	  race condition can occur. This patch does the proper locking
	  of the bridgecallno before modifying its state.

2013-06-10  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.23.0-rc1 Released.

2013-06-10 14:15 +0000 [r391215]  Matthew Jordan <mjordan@digium.com>

	* UPGRADE.txt, apps/app_queue.c, configs/queues.conf.sample: Add
	  announce-to-first-user option for app_queue In r386792, the
	  ability to play prompts to the first caller in a call queue was
	  added. While this is arguably a bug fix for those who expect the
	  first caller to continue receiving prompts while the agent is
	  dialed, it has the side effect of preventing the first caller
	  from hearing the agent immediately upon bridging. This may not be
	  a problem for those who really want this option, but for those
	  who didn't care whether or not the first caller in queue heard
	  their position, it was an issue. This patch disables the ability
	  for the first caller in the queue to hear prompts and adds a new
	  option, announce-to-first-user, to queues.conf. Those who the
	  behavior can enable it by setting this value to True. Note that
	  if we ever implement the ability to have the prompts be stopped
	  upon bridging, this option can be removed. (closes issue
	  ASTERISK-21782) Reported by: Remi Quezada

2013-06-10 09:30 +0000 [r391062-391143]  Alec L Davis <sivad.a@paradise.net.nz>

	* channels/chan_iax2.c: chan_iax2: nativebridge refactor, missed
	  unlock bridgecallno

	* channels/chan_iax2.c: fix bad edit after conflict resolution

	* channels/chan_iax2.c: IAX2: refactor nativebridge transfer remove
	  triple checking of iaxs[fr->callno]->transferring reduce
	  indentation. Reported by: alecdavis Tested by: alecdavis